# elastic-ai.stubGen

./: .gitignore  README.md  pyproject.toml  requirements.txt
examples/: traffic_speed.c  traffic_speed.h  traffic_speed.idl
src/: function.py  lexer.py  main.py  stub.py  stubbuilder.py  variable.py
src/elasticai/stubgen/: function.py  functionbuilder.py  main.py  parser.py  stub.py  stubbuilder.py  variable.py
test/: function_test.py  stub_test.py  stubbuilder_test.py
